--- a/style.css
+++ b/style.css
@@ -421,6 +421,7 @@ select{
 
 .c3{
     background-color: rgb(214, 200,187);
+
 }
 
 .c4{
@@ -433,6 +434,94 @@ select{
     margin-bottom:0px;
 
 }
+
+#cartLink{
+    position: aboslute;
+    float:right;
+
+
+}
+
+.cart-container {
+
+    display: grid;
+    grid-template-columns: 30% 20% 20% 10% 15% 5%;
+  }
+
+  .cart-item {
+    position: relative;
+    padding: 40px;
+    font-size: 16px;
+    text-align: left;
+    height:150px;
+    
+  }
+
+  .cartContent{
+    position:absolute;
+    margin: auto;
+    top:100px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+}
+
+.cart-item img{
+    display: block;
+    max-height:60%; 
+    max-width:60%;
+    margin-left: 10px;
+    margin-right: auto;
+    margin-bottom: auto;
+}
+
+.cartContent p {
+    margin:0px;
+    padding:0;
+    font-size: 20px;
+}
+
+.cartOption {
+
+    position:absolute;
+    top:50px;
+
+
+}
+
+#checkout{
+    text-align: center;
+    position:absolute;
+    margin-top:60px;
+    right:40px;
+    background-color: rgb(75, 75, 75);
+    height: 60px;
+    width:300px;
+}
+
+
+#checkout h3{
+    color: white;
+    font-weight: 100;
+}
+
+ #totalPrice{
+    display:inline-flex;
+    position:absolute;
+    right:40px;
+}
+
+#totalPrice h4{
+    margin: 18px;
+}
+
+#totalPrice h3{
+    margin: 18px;
+}
+
+
+
+
  
 
 
